--- a/docker/nvidia/docker-compose.yaml
+++ b/docker/nvidia/docker-compose.yaml
@@ -1,23 +1,21 @@
 version: '2.6'
 services:
-  perc_debug:
-    image: mqbench:2110
-    container_name: mqbench
-    shm_size: 1024M
+  weiyu:
+    image:  MQBench:torch2.2
+    container_name: MQBench_torch2.2
+    shm_size: 4096M
     privileged: true
+    ipc: host
+    runtime: nvidia
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: 1
+              count: "all"
               capabilities: [gpu]
     environment:
       - DISPLAY=:0
-    volumes:
-      - /projects:/projects/
-    ports:
-      - "38888:8888"
     network_mode: host
     stdin_open: true
     tty: true
